# gh-issues-tui

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  renovate.json
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  clickable-urls.md  close-reopen-confirmation-popup.md  detail-pane-two-region-scroll.md  development-log.md  inline-new-issue-form.md  jump-to-issue-number.md  markdown-rendering-detail-pane.md  pr-summary-modal-actionable.md
docs/superpowers/specs/: 2026-07-24-pr-summary-modal-actionable-design.md
src/: config.rs  cwd_repo.rs  main.rs
src/github/: auth.rs  client.rs  error.rs  mod.rs  types.rs
src/jira/: auth.rs  client.rs  mod.rs
src/linear/: auth.rs  client.rs  mod.rs
src/provider/: error.rs  mod.rs  types.rs
src/tui/: app.rs  event.rs  linkmap.rs  markdown.rs  mod.rs  theme.rs  ui.rs
