[package]
name = "gh-issues-tui"
version = "0.2.0"
edition = "2024"
description = "Interactive TUI for browsing and managing GitHub issues across an organisation"
license = "MIT"
repository = "https://github.com/pgmac-net/gh-issues-tui"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
dirs = "6.0"
open = "5.3"
ratatui = "0.30"
reqwest = { version = "0.13", features = ["json", "rustls", "rustls-native-certs", "http2"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
toml = "0.9"

[dev-dependencies]
tempfile = "3"
